初步完成
