# swagger/swagger.json
@@ -43,7 +43,7 @@
                 }
             }
         },
-        "/task/deletetask:id": {
+        "/task/deletetask/{id}": {
             "delete": {
                 "tags": [
                     "task"
@@ -210,6 +210,207 @@
                     },
                     "403": {
                         "description": ":id is empty"
+                    }
+                }
+            }
+        },
+        "/task/run": {
+            "post": {
+                "tags": [
+                    "task"
+                ],
+                "description": "create TaskData",
+                "operationId": "TaskDataController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for TaskData content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} executor.id"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/tasklog/": {
+            "get": {
+                "tags": [
+                    "tasklog"
+                ],
+                "description": "get TaskLog",
+                "operationId": "TaskLogController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskLog"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "tasklog"
+                ],
+                "description": "create TaskLog",
+                "operationId": "TaskLogController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for TaskLog content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskLog"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.TaskLog"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/tasklog/{id}": {
+            "get": {
+                "tags": [
+                    "tasklog"
+                ],
+                "description": "get TaskLog by id",
+                "operationId": "TaskLogController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskLog"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "tasklog"
+                ],
+                "description": "update the TaskLog",
+                "operationId": "TaskLogController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for TaskLog content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskLog"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.TaskLog"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "tasklog"
+                ],
+                "description": "delete the TaskLog",
+                "operationId": "TaskLogController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
                     }
                 }
             }
@@ -393,7 +594,7 @@
                 }
             }
         },
-        "/user/getuserfiles:id": {
+        "/user/getuserfiles/{id}": {
             "get": {
                 "tags": [
                     "user"
@@ -508,6 +709,27 @@
                 }
             }
         },
+        "models.TaskLog": {
+            "title": "TaskLog",
+            "type": "object",
+            "properties": {
+                "EndTime": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "StartTime": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "UserId": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -539,6 +761,10 @@
         {
             "name": "user",
             "description": "UserController operations for User\n"
+        },
+        {
+            "name": "tasklog",
+            "description": "TaskLogController operations for TaskLog\n"
         }
     ]
 }
